<resources>
    <string name="app_name">WhatsPlaying</string>
    <string name="notification_header">WhatsPlaying</string>
    <string name="notification_close">Close</string>
    <string name="main_activity_close_btn">Close  Background Service</string>
    <string name="main_activity_verbosity_header">Verbosity:</string>
    <string name="is_active_text">Tell me WhatsPlaying (Activate service)</string>

    <string-array name="verbosity_array">
        <item>Verbose</item>
        <item>Normal</item>
        <item>Simple</item>
    </string-array>
    <string name="title_activity_about">About</string>
    <string name="about_body">
        <![CDATA[This application can be used to know what song is currently playing.\n
        I developed this appliction to fit my own needs. Hope it works for you also. Feedback is appreciated!\n\n

        In order for WhatsPlaying to know what is playing in Spotify, you need to activate broadcasts in Spotify app settings:\n\n
        (Open Spotify => Settings =>  Activate: "Device broadcast status - allow other apps on your device to see what you are listening to")\n\n

        Spotify is registered trademark of Spotify AB.]]>
    </string>
    <string name="eula" translatable="false">
        Copyright 2016 Atte Heino\n\n

Licensed under the Apache License, Version 2.0 (the "License”);\n
you may not use this file except in compliance with the License.\n
You may obtain a copy of the License at\n\n

    http://www.apache.org/licenses/LICENSE-2.0\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="menu_about">About</string>
    <string name="action_close_service">Close  Background Service</string>
    <string name="spotify_hint"><![CDATA[Check out menu -> About to get Spotify connection to work.]]></string>
</resources>
