<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:mstb="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="fi.atteheino.whatsplaying.MainActivity">

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_box"
                android:elevation="2dp"
                android:text="ARTIST"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/artist"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_box"
                android:elevation="5dp"
                android:text="ALBUM"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/album"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_box"
                android:elevation="2dp"
                android:text="TRACK"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/verbosityHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/track"
                android:layout_marginTop="10dp"
                android:text="@string/main_activity_verbosity_header"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <org.honorato.multistatetogglebutton.MultiStateToggleButton
                android:id="@+id/verbosity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/verbosityHeader"
                android:layout_marginTop="10dip"
                mstb:mstbPrimaryColor="@color/gray"
                mstb:mstbSecondaryColor="@color/blue"
                mstb:values="@array/verbosity_array" />

            <Switch
                android:id="@+id/isActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/verbosity"
                android:layout_centerHorizontal="true"
                android:checked="false"
                android:enabled="true"
                android:text="@string/is_active_text"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/isActive"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/spotify_hint"
                android:id="@+id/spotify_hint" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
